--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,3 +2,22 @@
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
+
+set -g mouse on
+set -g history-limit 102400
+
+set -g base-index 1
+setw -g pane-base-index 1
+
+set -g renumber-windows on
+
+set -g status-bg '#e8a238'
+set -g status-fg '#282929'
+
+set -g pane-active-border-style 'fg=#e8a238'
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+run '~/.tmux/plugins/tpm/tpm'
+
